add authentication and authorization function
