# routes/auth.go
@@ -3,6 +3,9 @@ package routes
 import (
 	"net/http"
 
+	"github.com/BimaAdi/Oauth2AuthorizationServer/core"
+	"github.com/BimaAdi/Oauth2AuthorizationServer/models"
+	"github.com/BimaAdi/Oauth2AuthorizationServer/repository"
 	"github.com/BimaAdi/Oauth2AuthorizationServer/schemas"
 	"github.com/gin-gonic/gin"
 )
@@ -13,9 +16,54 @@ func authRoutes(rq *gin.RouterGroup) {
 	auths.POST("/login", authLoginRoute)
 }
 
+// Login
+//
+//	@Summary		Login
+//	@Description	login
+//	@Tags			Auth
+//	@Produce		json
+//	@Param			payload	formData	schemas.LoginFormRequest	true	"form data"
+//	@Success		200		{object}	schemas.LoginResponse
+//	@Failure		400		{object}	schemas.BadRequestResponse
+//	@Failure		500		{object}	schemas.InternalServerErrorResponse
+//	@Router			/auth/login [post]
 func authLoginRoute(c *gin.Context) {
-	// TODO implement login route
-	c.JSON(http.StatusNotImplemented, schemas.NotImplementedResponse{
-		Error: "Not Implemented Yet",
+	// Get data from form
+	username := c.PostForm("username")
+	password := c.PostForm("password")
+	formRequest := schemas.LoginFormRequest{
+		Username: username,
+		Password: password,
+	}
+
+	// Get User
+	user, err := repository.GetUserByUsername(formRequest.Username)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, schemas.BadRequestResponse{
+			Message: "invalid credentials",
+		})
+		return
+	}
+
+	// Check Password
+	if !core.CheckPasswordHash(formRequest.Password, user.Password) {
+		c.JSON(http.StatusBadRequest, schemas.BadRequestResponse{
+			Message: "invalid credentials",
+		})
+		return
+	}
+
+	// Generate JWT token
+	token, err := core.GenerateJWTTokenFromUser(models.DBConn, user)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, schemas.InternalServerErrorResponse{
+			Error: err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, schemas.LoginResponse{
+		AccessToken: token,
+		TokenType:   "Bearer",
 	})
 }
