# schemas/auth.go
@@ -1,0 +1,11 @@
+package schemas
+
+type LoginFormRequest struct {
+	Username string `form:"username"`
+	Password string `form:"password"`
+}
+
+type LoginResponse struct {
+	AccessToken string `json:"access_token"`
+	TokenType   string `json:"token_type"`
+}
