# schemas/common.go
@@ -8,6 +8,10 @@ type NotFoundResponse struct {
 	Message string `json:"message"`
 }
 
+type UnauthorizedResponse struct {
+	Message string `json:"message"`
+}
+
 type UnprocessableEntityResponse struct {
 	Message []map[string]string `json:"message"`
 }
